--- a/views/index.html
+++ b/views/index.html
@@ -31,6 +31,31 @@
                 </tr>
             </table>
             <button ng-click="sampleSubmit()" class="btn btn-success">Submit</button>
+            
+            <table class="table table-hover">
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Phone</th>
+                </tr>
+                <tr ng-repeat="person in personArray track by $index">
+                    <td>{{person.firstName}}</td>
+                    <td>{{person.lastName}}</td>
+                    <td>{{person.phone}}</td>
+                </tr>
+            </table>
+            
+            <br>
+            <h1>ng-repeat sample</h1>
+            <input type="text" ng-model="animal">
+            <button ng-click="addAnimal()">
+                AddAnimal
+            </button>
+            <ol>
+                <li ng-repeat="item in sampleArray track by $index">
+                    {{item}}
+                </li>
+            </ol>
         </div>
         
         <!--JS Dependencies-->
