--- a/views/index.html
+++ b/views/index.html
@@ -33,12 +33,16 @@
             <button ng-click="sampleSubmit()" class="btn btn-success">Submit</button>
             
             <table class="table table-hover">
+                <caption>
+                    <h3>Person Table</h3>
+                    <input style="float:right" type="text" ng-model="search" placeholder="search table">
+                </caption>
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Phone</th>
                 </tr>
-                <tr ng-repeat="person in personArrayCtrl track by $index">
+                <tr ng-repeat="person in personArrayCtrl |filter:search">
                     <td>{{person.firstName}}</td>
                     <td>{{person.lastName}}</td>
                     <td>{{person.phone}}</td>
@@ -72,5 +76,6 @@
         <script type="text/javascript" src="/scripts/controllers/appCtrl.js"></script>
         <script type="text/javascript" src="/scripts/controllers/appCtrl2.js"></script>
         <script type="text/javascript" src="/scripts/services/person.js"></script>
+        <script type="text/javascript" src="/scripts/services/personFactory.js"></script>
     </body>
 </html>
